--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "@defstudio/vite-livewire-plugin": "^0.2.6",
         "autoprefixer": "^10.4.8",
         "axios": "^0.27",
         "laravel-vite-plugin": "^0.5.0",
